--- a/jupyter notebook (task 2).ipynb
+++ b/jupyter notebook (task 2).ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style='color:#457bba'> Identifying and Defining <span>"
+    "# <span style='color:#457bba'> Identifying and Defining <span>"
    ]
   },
   {
@@ -239,7 +239,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <span style='color:#457bba'> Researching and Planning <span>"
+    "# <span style='color:#457bba'> Researching and Planning <span>"
    ]
   },
   {
