wrote README and on coding for showCharts

--- a/README.ipynb
+++ b/README.ipynb
@@ -13,7 +13,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "My program is for any users who are wanting to find a correct source with a level of efficiency."
+    "My program is for any users who are wanting to find a correct source of data with a level of efficiency. In order for the program to function, users will require a .csv file with a set of data in it and a request for what they want e.g. finding the mean of a dataset. The steps to getting what you want to find through the use of the program will require the following:\n",
+    "\n",
+    "1. Open your file\n",
+    "2. Run the program\n",
+    "3. Test your file to make sure that it works\n",
+    "4. Request a want by clicking on a number which shows up stating what you want\n",
+    "5. Open the output\n",
+    "6. Finished! \n"
    ]
   }
  ],
